# code_scripts_w

./: 02_chartqa_OECD.py  03_pew_research_data.py  04_synthdog_on_off_word_splitting.py  05_generate_pie_charts.py  06_Tizen_01.md  07_CMakeLists.txt  07_Tizen_02_main.cpp  07_Tizen_inc_app.h  07_project_layout.md  07_tizne_manifest.xml  1.c  2.c  Aoo.tsx  Auth.c  BypassFirstReshape  CMakeLists.txt  ChartQA_Filterer.py  Chart_gen_pew_research.py  Chart_gen_pew_v2,py  Cool_UI.c  Dist_Synthdog.py  Embedding_offloading  Final.c  Finalv2.c  GUI.c  GUI_ST.c  Geo_collage.py  Geo_collage_v2.py  Geo_segment_v2.py  Logits_Only_Export.py  M1.c  M1v2.c  M2.txt  M2v2.txt  Pre-transporse_constant.py  ST_REST.c  Sampler.py  TIZEN_REST_V2.c  TIZEN_UI_v01.c  Tizen_GUI_01.c  (+206 more)
changes/: py
